--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,8 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
+    "@nextui-org/react": "^2.2.9",
     "@tanstack/react-query": "^5.24.6",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.8",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
