--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,11 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
-    "dotenv": "^16.4.5"
+    "cookie-parser": "^1.4.6",
+    "dayjs": "^1.11.10",
+    "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.11",
+    "otp-generator": "^4.0.1"
   }
 }
