--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cookie-parser": "^1.4.6",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
