--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,17 @@
     "@material-tailwind/react": "^2.1.9",
     "@nextui-org/react": "^2.2.9",
     "@tanstack/react-query": "^5.24.6",
+    "axios": "^1.6.7",
     "clsx": "^2.1.0",
+    "cookies-next": "^4.1.1",
     "framer-motion": "^11.0.8",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.0",
-    "react-icons": "^5.0.1"
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.0.1",
+    "react-otp-input": "^3.1.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
