--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,15 @@
 PORT = 8080
 DB_URL = "mongodb+srv://kirti2818:kirti2818@cluster0.b7pelc8.mongodb.net/chat_app"
 SECRET_KEY = "kirti987"
+GOOGLE_CLIENT_ID = "77956683542-ai06bu68uhdnu9rten72af4h0f095ovq.apps.googleusercontent.com"
+GOOGLE_CLIENT_SECRET = "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"
+BACKEND_URL = "http://localhost:8080/"
+
+# we can write secret id and client id in string or normal
+
+# PORT = 8080
+# DB_URL = "mongodb+srv://kirti2818:kirti2818@cluster0.b7pelc8.mongodb.net/chat_app"
+# SECRET_KEY = "kirti987"
+# GOOGLE_CLIENT_ID = 603152881593-mb03c9i35ipedhr2dqjqo1ogel3ulb7q.apps.googleusercontent.com
+# GOOGLE_CLIENT_SECRET = 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
+# BACKEND_URL = "http://localhost:8080/"
