--- a/backend/package.json
+++ b/backend/package.json
@@ -20,8 +20,12 @@
     "cookie-parser": "^1.4.6",
     "dayjs": "^1.11.10",
     "dotenv": "^16.4.5",
+    "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.11",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "passport": "^0.7.0",
+    "passport-google-oauth2": "^0.2.0",
+    "uuid": "^9.0.1"
   }
 }
