--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
     "passport-google-oauth2": "^0.2.0",
+    "socket.io": "^4.7.4",
     "uuid": "^9.0.1"
   }
 }
