--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,8 @@
     "react-hook-form": "^7.51.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
-    "react-otp-input": "^3.1.1"
+    "react-otp-input": "^3.1.1",
+    "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
