--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "clsx": "^2.1.0",
     "cookies-next": "^4.1.1",
     "framer-motion": "^11.0.8",
+    "jwt-decode": "^4.0.0",
     "next": "14.1.1",
     "react": "^18",
     "react-dom": "^18",
