--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.4.5",
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.4.0",
     "nodemailer": "^6.9.11",
     "otp-generator": "^4.0.1",
     "passport": "^0.7.0",
