--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
     "@nextui-org/react": "^2.2.9",
+    "@reduxjs/toolkit": "^2.2.1",
     "@tanstack/react-query": "^5.24.6",
     "axios": "^1.6.7",
     "clsx": "^2.1.0",
@@ -24,6 +25,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-otp-input": "^3.1.1",
+    "react-redux": "^9.1.0",
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
