--- a/backend/.env
+++ b/backend/.env
@@ -3,8 +3,8 @@ DB_URL = "mongodb+srv://kirti2818:kirti2818@cluster0.b7pelc8.mongodb.net/chat_ap
 SECRET_KEY = "kirti987"
 GOOGLE_CLIENT_ID = "77956683542-ai06bu68uhdnu9rten72af4h0f095ovq.apps.googleusercontent.com"
 GOOGLE_CLIENT_SECRET = "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"
-BACKEND_URL = "http://localhost:8080/api/"
-FRONTEND_URL = "http://localhost:3000/"
+BACKEND_URL = "https://chat-application-gi09.onrender.com/api/"
+FRONTEND_URL = "https://chat-application-ruddy-five.vercel.app/"
 
 # we can write secret id and client id in string or normal
 
