--- a/backend/.env
+++ b/backend/.env
@@ -5,7 +5,7 @@ GOOGLE_CLIENT_ID = "77956683542-ai06bu68uhdnu9rten72af4h0f095ovq.apps.googleuser
 GOOGLE_CLIENT_SECRET = "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"
 # BACKEND_URL = "https://chat-application-gi09.onrender.com/api/"
 # FRONTEND_URL = "https://chat-application-ruddy-five.vercel.app/"
-BACKEND_URL = "http://localhost:8080/"
+BACKEND_URL = "http://localhost:8080/api/"
 FRONTEND_URL = "http://localhost:3000/"
 
 # we can write secret id and client id in string or normal
