--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^5.0.1",
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.0",
+    "react-responsive": "^9.0.2",
     "socket.io-client": "^4.7.4"
   },
   "devDependencies": {
